# OckhamJSON

./: .gitignore  .gitlab-ci.yml  ArrayUtils.h  CMakeLists.txt  JSON.c  JSON.h  JSON.h.in  README.md  StringUtils.h  example.c  notes.txt  test  test.c  unittests.c
JSONUtilities/: CMakeLists.txt  JSONUtils.c
JSONUtilities/Tests/: CMakeLists.txt  Parse.c  ParseMember.c  ParseNumber.c
StringUtilities/: CMakeLists.txt  StringUtils.c  StringUtils.h  unittests.c
StringUtilities/Tests/: CMakeLists.txt  Contains.c  Equals.c  EqualsData.h  ParseUntilControlCharacter.c  StripUntilControlCharacter.c  StripValue.c  StripWSUntilControlCharacter.c  TestUtils.h  contains.c  getAll.c  getLine.c  stripLeadingWhiteSpace.c  stripUntilControlCharacter.c  stripValue.c
Tests/: CMakeLists.txt  DeserializeFromTemplate.c  EqualsParse.c  ParseA.c  ParseJSONVal.c  ParseMember.c  ParseNumber.c  ParseSingleton.c  ParseString.c
src/: CMakeLists.txt  JSONUtils.c  JSONUtils.h  StringUtils.c
src/Tests/: CMakeLists.txt  Equals.c  EqualsParse.c  ParseString.c  StripLeadingWhiteSpace.c  StripUntilControlCharacter.c
